--- a/三维地球与轨道卫星/1.html
+++ b/三维地球与轨道卫星/1.html
@@ -3,77 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Earth Screensaver-like Effect</title>
+  <title>3D地球与卫星轨道</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
 </head>
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script>
-    // Scene setup
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
+<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+<script>
+  // 场景设置
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+  const renderer = new THREE.WebGLRenderer();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  // 创建地球球体
+  const earthGeometry = new THREE.SphereGeometry(5, 64, 64); // 更高的分段数使球体更加平滑
+  const textureLoader = new THREE.TextureLoader();
+  const earthTexture = textureLoader.load('https://api.allorigins.win/raw?url=https://www.solarsystemscope.com/textures/download/2k_earth_daymap.jpg');
+  const earthMaterial = new THREE.MeshStandardMaterial({
+    map: earthTexture,
+    emissive: new THREE.Color(0xeeeeee), // 发光效果
+    emissiveIntensity: 0.1
+  });
+  const earth = new THREE.Mesh(earthGeometry, earthMaterial);
+  scene.add(earth);
+
+  // 添加点光源实现地球的光晕效果
+  const pointLight = new THREE.PointLight(0xffffff, 1, 100);
+  pointLight.position.set(10, 10, 10);
+  scene.add(pointLight);
+
+  // 添加环境光源提供柔和的光照
+  const ambientLight = new THREE.AmbientLight(0x404040); // 柔和的白色光源
+  scene.add(ambientLight);
+
+  // 设置摄像机位置
+  camera.position.z = 20;
+
+  // 添加简单的星空背景
+  const starsGeometry = new THREE.SphereGeometry(50, 64, 64);
+  const starsMaterial = new THREE.MeshBasicMaterial({
+    color: 0x000000,
+    side: THREE.BackSide,
+    map: textureLoader.load('https://api.allorigins.win/raw?url=https://www.solarsystemscope.com/textures/download/2k_stars.jpg')
+  });
+  const stars = new THREE.Mesh(starsGeometry, starsMaterial);
+  scene.add(stars);
+
+  // 初始化 OrbitControls 以便可以用鼠标拖动
+  const controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+  // 创建卫星轨道
+  const orbitGeometry = new THREE.RingGeometry(7, 7.2, 64); // 创建轨道环
+  const orbitMaterial = new THREE.MeshBasicMaterial({ color: 0x888888, side: THREE.DoubleSide });
+  const orbit = new THREE.Mesh(orbitGeometry, orbitMaterial);
+
+  // 设置轨道的倾斜角度（例如：30度倾斜）
+  orbit.rotation.x = Math.PI / 4; // 轨道绕x轴倾斜 45度
+  // orbit.rotation.y = Math.PI / 6; // 可选择绕y轴倾斜，例如：30度
+  scene.add(orbit);
+
+  // 创建卫星
+  const satelliteGeometry = new THREE.SphereGeometry(0.5, 16, 16); // 卫星的小球
+  const satelliteMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000 }); // 卫星的材质
+  const satellite = new THREE.Mesh(satelliteGeometry, satelliteMaterial);
+  scene.add(satellite);
+
+  // 让卫星围绕轨道旋转
+  let satelliteAngle = 0; // 初始化卫星的角度
+
+  // 轨道倾斜角度
+  const orbitInclineAngle = Math.PI / 4; // 轨道倾斜的角度
+
+  // 处理窗口大小变化
+  window.addEventListener('resize', () => {
     renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+  });
 
-    // Create the Earth Sphere
-    const earthGeometry = new THREE.SphereGeometry(5, 64, 64); // Higher segments for smoothness
-    const textureLoader = new THREE.TextureLoader();
-    const earthTexture = textureLoader.load('https://api.allorigins.win/raw?url=https://www.solarsystemscope.com/textures/download/2k_earth_daymap.jpg');
-    const earthMaterial = new THREE.MeshStandardMaterial({
-      map: earthTexture,
-      emissive: new THREE.Color(0xeeeeee), // Emissive light for glow
-      emissiveIntensity: 0.1
-    });
-    const earth = new THREE.Mesh(earthGeometry, earthMaterial);
-    scene.add(earth);
+  // 动画函数实现平滑的旋转效果
+  let rotationSpeed = 0.001; // 控制地球旋转速度
+  function animate() {
+    requestAnimationFrame(animate);
 
-    // Add point light for earth glow effect
-    const pointLight = new THREE.PointLight(0xffffff, 1, 100);
-    pointLight.position.set(10, 10, 10);
-    scene.add(pointLight);
+    // 让地球持续旋转
+    earth.rotation.y += rotationSpeed;
 
-    // Add ambient light for softer lighting
-    const ambientLight = new THREE.AmbientLight(0x404040); // Soft white light
-    scene.add(ambientLight);
+    // 使卫星沿轨道旋转，同时同步运动轨迹和轨道
+    satelliteAngle += 0.005; // 卫星旋转速度
+    if (satelliteAngle > 2 * Math.PI) satelliteAngle -= 2 * Math.PI; // 保证角度不超过360度
 
-    // Set camera position
-    camera.position.z = 20;
+    // 计算卫星的新位置
+    satellite.position.x = 7 * Math.cos(satelliteAngle); // 卫星的 X 坐标
+    satellite.position.z = 7 * Math.sin(satelliteAngle)*Math.sin(orbitInclineAngle); // 卫星的 Z 坐标
 
-    // Add a simple starry background
-    const starsGeometry = new THREE.SphereGeometry(50, 64, 64);
-    const starsMaterial = new THREE.MeshBasicMaterial({
-      color: 0x000000,
-      side: THREE.BackSide,
-      map: textureLoader.load('https://api.allorigins.win/raw?url=https://www.solarsystemscope.com/textures/download/2k_stars.jpg')
-    });
-    const stars = new THREE.Mesh(starsGeometry, starsMaterial);
-    scene.add(stars);
+    // 轨道的倾斜角度，使卫星沿倾斜轨道运动
+    satellite.position.y = 7 * Math.sin(satelliteAngle)*Math.sin(orbitInclineAngle); // 卫星的 Y 坐标，根据倾斜角度调整
 
-    // Handle window resizing
-    window.addEventListener('resize', () => {
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-    });
+    // 更新控制器
+    controls.update();
 
-    // Animation function for smooth rotation
-    let rotationSpeed = 0.001; // Control rotation speed
+    // 渲染场景
+    renderer.render(scene, camera);
+  }
 
-    function animate() {
-      requestAnimationFrame(animate);
-
-      // Slowly rotate the Earth around the Y-axis (horizontal rotation)
-      earth.rotation.y += rotationSpeed;
-
-      // Render the scene
-      renderer.render(scene, camera);
-    }
-
-    animate();
-  </script>
+  animate();
+</script>
 </body>
 </html>
