--- a/三维地球与轨道卫星/earth_BEIDOU.html
+++ b/三维地球与轨道卫星/earth_BEIDOU.html
@@ -61,7 +61,7 @@
 <script>
     // Navigate button event
         document.getElementById('navigate-button').addEventListener('click', () => {
-            window.location.href = 'normal.html'; // Replace with your target URL
+            window.location.href = '../星轨二维实时映射/normal.html'; // Replace with your target URL
         });
     document.getElementById('222').addEventListener('click', () => {
         window.location.href = 'earth_stars-link.html'; // Replace with your target URL
