--- a/三维地球与轨道卫星/earth_stars-link.html
+++ b/三维地球与轨道卫星/earth_stars-link.html
@@ -1,51 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Earth and Satellite Orbits</title>
     <style>
-        body { margin: 0; display: flex; overflow: hidden; }
-        #container { display: flex; flex-direction: row; width: 100%; height: 100%; }
-        #3d-view { flex: 2; }
-        #chart-container { flex: 1; padding: 10px; background-color: #f9f9f9; overflow-y: auto; }
-        canvas { display: block; }
+        body {
+            margin: 0;
+            display: flex;
+            overflow: hidden;
+        }
+
+        #container {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 100%;
+        }
+
+        #3d-view {
+            flex: 2;
+        }
+
+        #chart-container {
+            flex: 1;
+            padding: 10px;
+            background-color: #f9f9f9;
+            overflow-y: auto;
+        }
+
+        canvas {
+            display: block;
+        }
     </style>
 </head>
+
 <body>
 <style>
     body {
         margin: 0;
         display: flex;
         overflow: hidden;
-        height: 100vh; /* 保证充满屏幕高度 */
+        height: 100vh;
+        /* 保证充满屏幕高度 */
     }
+
     #container {
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 100%; /* 确保内部容器充满父容器 */
+        height: 100%;
+        /* 确保内部容器充满父容器 */
     }
+
     #3d-view {
         flex: 2;
     }
+
     #chart-container {
         flex: 1;
         padding: 10px;
         background-color: #f9f9f9;
-        overflow-y: auto; /* 确保可以滚动 */
-        height: 100%; /* 高度继承父容器 */
-        box-sizing: border-box; /* 包含内边距在高度计算内 */
+        overflow-y: auto;
+        /* 确保可以滚动 */
+        height: 100%;
+        /* 高度继承父容器 */
+        box-sizing: border-box;
+        /* 包含内边距在高度计算内 */
     }
-    #button-container { position: absolute; top: 10px; right: 10px; z-index: 100; }
-    button { padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    button:hover { background-color: #0056b3; }
+
+    #button-container {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 100;
+    }
+
+    button {
+        width: 80%;
+        padding: 10px 20px;
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin: 20px;
+    }
+
+    button:hover {
+        background-color: #0056b3;
+    }
+    #111{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 100;
+        display: flex;
+        flex-direction: row; /* 水平排列按钮 */
+        flex-wrap: wrap; /* 允许换行 */
+        gap: 10px; /* 按钮之间的间距 */
+    }
 </style>
 <div id="button-container">
-    <button id="navigate-button" >查看对地信息</button>
+    <button id="navigate-button">查看对地信息</button>
 </div>
 <div id="111">
-    <button id="222" >北斗卫星</button>
+    <button id="222">北斗卫星</button>
+    <button id="toggle-background">切换背景</button>
+    <button id="toggle-satellites">切换卫星显示</button>
+    <button id="toggle-orbits">切换轨道显示</button>
 </div>
 <div id="container">
     <div id="3d-view"></div>
@@ -61,15 +125,45 @@
 <script>
     // Navigate button event
     document.getElementById('navigate-button').addEventListener('click', () => {
-        window.location.href = 'normal.html'; // Replace with your target URL
+        window.location.href = '../星轨二维实时映射/normal.html'; // Replace with your target URL
     });
     document.getElementById('222').addEventListener('click', () => {
         window.location.href = 'earth_BEIDOU.html'; // Replace with your target URL
     });
+    let satellitesVisible = true;
+    let orbitsVisible = true;
+
+    // Toggle satellite visibility
+    document.getElementById('toggle-satellites').addEventListener('click', () => {
+        satellitesVisible = !satellitesVisible;
+        satellites.forEach((sat) => {
+            sat.object.visible = satellitesVisible;
+        });
+    });
+
+    // Toggle orbit visibility
+    document.getElementById('toggle-orbits').addEventListener('click', () => {
+        orbitsVisible = !orbitsVisible;
+        satellitePaths.forEach((path) => {
+            path.pathLine.visible = orbitsVisible;
+        });
+    });
+    let currentBackground = 1;
+    document.getElementById('toggle-background').addEventListener('click', () => {
+        if (currentBackground === 1) {
+            starsMaterial.map = backgroundTexture2;
+            currentBackground = 2;
+        } else {
+            starsMaterial.map = backgroundTexture1;
+            currentBackground = 1;
+        }
+        starsMaterial.needsUpdate = true; // Ensure the material updates
+    });
+
 
     // Scene setup
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 20000);
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth * 0.66, window.innerHeight);
     document.getElementById('3d-view').appendChild(renderer.domElement);
@@ -84,6 +178,8 @@
     const earthGeometry = new THREE.SphereGeometry(6.4, 360, 180);
     const textureLoader = new THREE.TextureLoader();
     const earthTexture = textureLoader.load('earth.jpg');
+    backgroundTexture1 = textureLoader.load('starmap_4k.jpg');
+    backgroundTexture2 = textureLoader.load('constellation_figures.jpg');
     const earthMaterial = new THREE.MeshStandardMaterial({
         map: earthTexture,
         emissive: new THREE.Color(0xeeeeee),
@@ -104,12 +200,12 @@
     camera.position.z = 20;
     // https://api.allorigins.win/raw?url=https://www.solarsystemscope.com/textures/download/2k_stars.jpg
     //Add star background
-    const starsGeometry = new THREE.SphereGeometry(50, 64, 64);
+    const starsGeometry = new THREE.SphereGeometry(5000, 128, 128);
     const starsMaterial = new THREE.MeshBasicMaterial({
-        color: 0x111111,
         side: THREE.BackSide,
-        map: textureLoader.load('raw.jpg')
+        map: backgroundTexture1
     });
+
     const stars = new THREE.Mesh(starsGeometry, starsMaterial);
     console.log(stars)
     scene.add(stars);
@@ -208,7 +304,6 @@
         const now = new Date();
 
         for (let i = 0; i <= points; i++) {
-            // 动态调整步进大小
             const positionAndVelocity = satellite.propagate(satrec, now);
             const position = positionAndVelocity.position;
 
@@ -217,7 +312,6 @@
                     position.x ** 2 + position.y ** 2 + position.z ** 2
                 );
 
-                // 地球半径 (约6371 km)
                 const earthRadius = 6371;
                 const altitude = (distanceFromEarthCenter / 1000) - earthRadius;
 
@@ -268,15 +362,18 @@
                 const tleLine2 = tleLines[i + 2].trim();
 
                 const satrec = satellite.twoline2satrec(tleLine1, tleLine2);
-                const satelliteObject = createSatellite(0xff0000); // Each satellite has a red sphere
+                const satelliteObject = createSatellite(0xff0000); // Create satellite with red sphere
+                satelliteObject.visible = satellitesVisible; // Set initial visibility
                 satellites.push({ satrec, object: satelliteObject, name: satelliteName });
 
                 // Draw the satellite's orbit
                 const orbitPositions = calculateOrbit(satrec, 360);
-                const orbitLine = createOrbitLine(orbitPositions,  0xCCCCCC);
+                const orbitLine = createOrbitLine(orbitPositions, 0xCCCCCC);
+                orbitLine.visible = orbitsVisible; // Set initial orbit visibility
                 scene.add(orbitLine);
+                satellitePaths.push({ pathLine: orbitLine, positions: [] });
 
-                // Create chart for real-time data
+                // Create chart for real-time data (unchanged)
                 const chartDiv = document.createElement('div');
                 chartDiv.style.marginBottom = '20px';
                 chartDiv.innerHTML = `<h3>${satelliteName}</h3><canvas id="${satelliteName}-chart"></canvas>`;
@@ -307,13 +404,7 @@
                     }
                 });
 
-                // Add a path for the satellite's actual trajectory
-                const pathGeometry = new THREE.BufferGeometry();
-                const pathMaterial = new THREE.LineBasicMaterial({ color: Math.random() * 0x666666 });
-                const pathLine = new THREE.Line(pathGeometry, pathMaterial);
-                satellitePaths.push({ pathLine, positions: [] });
-
-                scene.add(pathLine);
+                scene.add(orbitLine);
             }
 
             updateSatellites();
@@ -321,6 +412,7 @@
             console.error("Error fetching TLE data:", error);
         }
     }
+
     // Movement variables
     const moveSpeed = 0.1;
     const shiftSpeedMultiplier = 2;
@@ -376,4 +468,5 @@
     animate();
 </script>
 </body>
+
 </html>
